--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,15 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_songs"
-        android:layout_weight="1"
         android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="0dp" />
+        android:layout_height="wrap_content" />
+
+    <ProgressBar
+        android:id="@+id/id_loading"
+        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
 </LinearLayout>
